# mpd_client

./: .env-dist  .gitignore  Makefile  README.md  media-keys.service  media_keys.py  mpd_client.sh  pyproject.toml
bash_version/: README.md
mpd_client/: media_keys.py
